[gd_scene load_steps=10 format=2]

[ext_resource path="res://Presentation/Units/UnitBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/godot-ferris.png" type="Texture" id=2]
[ext_resource path="res://Presentation/Units/PlaceholderUnit.gd" type="Script" id=3]
[ext_resource path="res://Assets/icon.png" type="Texture" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 0.5

[sub_resource type="QuadMesh" id=4]
size = Vector2( 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.0941176, 0.929412, 0.0705882, 1 )
albedo_texture = ExtResource( 4 )

[node name="PlaceholderUnit" type="Spatial"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": "Placeholder Unit. This dude will be able to function like any decent unit should function. Howeverm he is ugly."
}

[node name="UnitBase" parent="." instance=ExtResource( 1 )]

[node name="UnitMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.574108, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="UnitMesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 8.14605e-08, 0.5 )

[node name="CollisionShape" type="CollisionShape" parent="UnitMesh/Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.5, 0 )
shape = SubResource( 3 )

[node name="SelectionCircle" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, -4.88762e-07, 1, 0, -3, -1.62921e-07, 0, 0.057076, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
__meta__ = {
"_editor_description_": "This should become visible when this unit is selected. Stupid, but effective."
}
[connection signal="mouse_entered" from="UnitMesh/Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="UnitMesh/Area" to="." method="_on_Area_mouse_exited"]
